# benchmarks

./: .gitignore
.github/workflows/: build-and-push.yml  build-pr-image.yml
fiber-vs-springboot/: README.md  kind-config.yaml  monitoring-values.yaml  run-benchmark.sh  setup.sh
fiber-vs-springboot/go-fiber/: Dockerfile  go.mod  go.sum  main.go
fiber-vs-springboot/iac/: hetzner-k3s-cluster.yaml
fiber-vs-springboot/java-springboot/: .project  Dockerfile  pom.xml
fiber-vs-springboot/java-springboot/src/main/java/com/example/: BenchmarkController.java  SpringBoot4ServerApplication.java
fiber-vs-springboot/java-springboot/src/main/resources/: application.properties
fiber-vs-springboot/k6/: test-fiber.js  test-springboot.js  testruns.yaml
fiber-vs-springboot/k8s/: dashboard-configmap.yaml  deployments.yaml
rust-server-vs-goserver/: README.md  k6-values.yaml  kind-config.yaml  monitoring-values.yaml  run-benchmark.sh  setup.sh
rust-server-vs-goserver/go-server/: Dockerfile
rust-server-vs-goserver/iac/: hetzner-k3s-cluster.yaml
rust-server-vs-goserver/k6/: test-go.js  test-rust.js  testruns.yaml
rust-server-vs-goserver/k8s/: dashboard-configmap.yaml  deployments.yaml
rust-server-vs-goserver/rust-server/: Cargo.toml  Dockerfile
rust-server-vs-goserver/rust-server/src/: main.rs
