[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["asm"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
